--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --color-neutral-light: #D2D2D2;
   --color-keys: #37474F;
   --color-keys-light: #E5E5E5;
-  --font-size-large: 60px;
+  --font-size-large: 50px;
   --font-size-medium: 20px;
   --transition: all .2s ease-in-out;
 }
@@ -20,6 +20,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -29,24 +30,27 @@ body {
   height: 100vh;
 }
 
-li, ol, ul {
+li,
+ol,
+ul {
   padding: 0;
   display: inline-block;
 }
 
 h2 {
   margin: 0;
-  text-transform: uppercase;
-  font-family: 'Open Sans', sans-serif;
   font-size: var(--font-size-large);
-  margin: 0;
+}
+
+h2,
+.game-button {
+  text-transform: uppercase;
 }
 
 button {
   margin: 6px;
   border: 1px solid transparent;
   padding: .5rem 1rem;
-  color: var(--color-keys);
   font-size: var(--font-size-medium);
   background-color: var(--color-keys-light);
   border-radius: 5px;
@@ -59,8 +63,8 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 100%;
-  max-height: 900px;
+  height: 95%;
+  max-height: 750px;
   text-align: center;
 }
 
@@ -72,7 +76,8 @@ button {
 /* Title */
 
 .header {
-  color: var(--color-start);
+  color: rgb(248, 234, 108);
+  -webkit-text-stroke: 1px goldenrod;
 }
 
 /* Phrase */
@@ -82,19 +87,24 @@ button {
   height: 65px;
   width: 65px;
   padding: 20px 1px 0 1px;
-  margin-right: 2px;
-  color: #37474F;
+  margin-right: 8px;
+  margin-bottom: 8px;
+  color: var(--color-neutral-light);
   background: var(--color-neutral-light);
   border-radius: 5px;
 }
 
 .space {
-  width: 15px;
+  width: 20px;
 }
 
-.show {
-  color: #000;
-  background-color: #76CE82;
+.show,
+.correct {
+  background-color: rgb(243, 242, 161);
+  border: 2px solid goldenrod;
+  color: rgb(219, 157, 0);
+  animation: selected 3s .5s linear infinite, wiggle .4s linear;
+  box-shadow: 0 1px 7px 0 rgb(228, 180, 58), 0 1px 7px 0 rgb(228, 180, 58);
 }
 
 /* Keyboard */
@@ -104,19 +114,44 @@ button {
   justify-content: center;
 }
 
-.chosen {
-  background: var(--color-neutral);
+.correct {
+  font-size: 60px;
+}
+
+.wrong,
+.correct {
   border-radius: 5px;
   font-size: var(--font-size-medium);
-  color: #FFFFFF;
+}
+
+.wrong {
+  background: var(--color-lose);
+  color: darkred;
+  border: 2px solid darkred;
+  transform: scale(.8);
+  opacity: .6;
 }
 
 .game-button {
   padding: 8px;
   margin: 50px auto;
-  background: #FFFFFF;
+  background: rgb(248, 210, 114);
+  color: goldenrod;
+  border: 1px solid rgb(224, 161, 0);;
   border-radius: 5px;
   font-size: var(--font-size-medium);
+  animation: float 3s -1.5s linear infinite;
+}
+
+.game-button:hover {
+  transform: scale(1.2);
+  animation-play-state: paused;
+  cursor: pointer;
+  color: goldenrod);
+  background: white;
+  box-shadow: 6px 6px 25px rgb(248, 234, 108), -6px -6px 25px rgb(248, 234, 108);
+  -webkit-text-stroke: 0;
+  border: 3px solid rgb(209, 125, 0);
 }
 
 /* Overlay */
@@ -131,7 +166,13 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
-  border-radius: 5px;
+  z-index: 10;
+}
+
+.title,
+.tries {
+  animation: float 3s linear infinite,
+    textOutline 3s linear infinite;
 }
 
 .title {
@@ -140,10 +181,6 @@ button {
 
 .start {
   background-color: var(--color-start);
-}
-
-.start a {
-  color: var(--color-win);
 }
 
 .win {
@@ -160,4 +197,60 @@ button {
 
 .lose a {
   color: var(--color-lose);
+}
+
+/* Keyframes */
+
+@keyframes selected {
+  50% {
+    transform: scale(1.1);
+    opacity: .9;
+  }
+
+  100% {
+    transform: (.9);
+  }
+}
+
+@keyframes float {
+  25% {
+    transform: translateY(-15px);
+    transform: scale(1.1);
+  }
+
+  80% {
+    transform: translateY(15px);
+    transform: scale(.9);
+  }
+}
+
+@keyframes textOutline {
+  25% {
+    text-shadow: 6px 6px 20px rgb(224, 161, 0), -6px -6px 20px rgb(224, 161, 0);
+    -webkit-text-stroke: 2px goldenrod;
+    color: rgb(248, 234, 108);
+  }
+
+  80% {
+    -webkit-text-stroke: 1px goldenrod;
+  }
+
+}
+
+@keyframes wiggle {
+  25% {
+    transform: rotate(-5deg);
+  }
+
+  50% {
+    transform: rotate(5deg);
+  }
+
+  75% {
+    transform: rotate(-5deg);
+  }
+
+  100% {
+    transform: rotate(5deg);
+  }
 }
